--- a/css/style.css
+++ b/css/style.css
@@ -510,7 +510,7 @@ input.gn-search:focus {
 
 
 /* ===========================
---- About
+--- quem-somos
 ============================ */
 
 .boxed-grey {
@@ -580,10 +580,10 @@ input.gn-search:focus {
 
 
 /* ===========================
---- Services
+--- o-que-e-autismos
 ============================ */
 
-.service-icon {
+.o-que-e-autismo-icon {
 	margin-bottom: 20px;
 }	
 
@@ -591,7 +591,7 @@ input.gn-search:focus {
 
 
 /* ===========================
---- Works
+--- atividades-recentes
 ============================ */
 
 .gallery-item > div {
@@ -912,4 +912,16 @@ a.scroll{
 a.scroll:hover{
 	opacity:1;
 	color:#2D3035;
+}
+
+.gn-icon-q::before {
+	content: "Q";
+}
+
+.gn-icon-o::before {
+	content: "O";
+}
+
+.gn-icon-a::before {
+	content: "A";
 }
